--- a/kiosk/templates/kiosk/base.html
+++ b/kiosk/templates/kiosk/base.html
@@ -84,7 +84,7 @@ blockquote{
     <div class="d-flex">
         <div class="mr-auto p-2" id="app_name"><h1 class="make-black">WEBLITE</h1></div>
         <div class="p-2" id="abt"><a href="/about/"><h5>ABOUT</h5></a></div>
-        <div class="p-2" id="prcss"><a href="/attendance/"><h5>ATTENDENCE</h5></a></div>
+        <div class="p-2" id="prcss"><a href="/attendance/"><h5>ATTENDANCE</h5></a></div>
         <div class="p-2" id="rgstr"><a href="/cgpa/"><h5>CGPA</h5></a></div>
         <div class="p-2" id="cntct"><a href="/logout/"><h5>LOGOUT</h5></a></div>
     </div>
